fixed or applied code review changes